--- a/merchandise.web/pom.xml
+++ b/merchandise.web/pom.xml
@@ -31,9 +31,9 @@
 			<artifactId>merchandise.application</artifactId>
 			<version>${merchandise.version}</version>
 		</dependency>
-		
-		
-		
+
+
+
 		<dependency>
 			<groupId>com.jolbox</groupId>
 			<artifactId>bonecp</artifactId>
@@ -45,8 +45,8 @@
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.version}</version>
 		</dependency>
-		
-		
+
+
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-server</artifactId>
@@ -69,32 +69,43 @@
 			<version>${vaadin.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.vaadin.addons.lazyquerycontainer</groupId>
+			<artifactId>vaadin-lazyquerycontainer</artifactId>
+			<version>7.4.0.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.4</version>
 			<scope>provided</scope>
 		</dependency>
 
-		
-<dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
 
 
-		
+
+
 
 	</dependencies>
 
 	<repositories>
-		
+
 
 		<repository>
 			<id>jvnet-nexus-snapshots</id>
 			<name>jvnet-nexus-snapshots</name>
 			<url>https://maven.java.net/content/repositories/snapshots/</url>
+		</repository>
+
+		<repository>
+			<id>vaadin-addons</id>
+			<url>http://maven.vaadin.com/vaadin-addons</url>
 		</repository>
 	</repositories>
 	<build>
@@ -102,7 +113,7 @@
 		<finalName>merchandise.web</finalName>
 
 		<resources>
-			
+
 
 		</resources>
 
@@ -165,8 +176,8 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-			
+
+
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -175,7 +186,8 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -195,7 +207,7 @@
 										<goals>
 											<goal>resources</goal>
 											<goal>update-widgetset</goal>
-											  <goal>compile-theme</goal>
+											<goal>compile-theme</goal>
 											<goal>compile</goal>
 										</goals>
 									</pluginExecutionFilter>
@@ -210,6 +222,6 @@
 			</plugins>
 		</pluginManagement>
 
-		
+
 	</build>
 </project>
