--- a/merchandise.web/src/main/webapp/WEB-INF/web.xml
+++ b/merchandise.web/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app  version="2.5">
+<web-app version="2.5">
 	<display-name>Vaadin Web Application</display-name>
 	<context-param>
 		<description>Vaadin production mode</description>
@@ -7,9 +7,9 @@
 		<param-value>true</param-value>
 	</context-param>
 	<context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>WEB-INF/merchandise.xml</param-value>
- 	 </context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>WEB-INF/merchandise.xml</param-value>
+	</context-param>
 	<servlet>
 		<servlet-name>Vaadin</servlet-name>
 		<servlet-class>com.vaadin.server.VaadinServlet</servlet-class>
@@ -19,33 +19,49 @@
 			<param-value>de.mq.merchandise.subject.StartViewImpl</param-value>
 		</init-param>
 	</servlet>
-	
-	
-	
+
+
+
 	<servlet-mapping>
 		<servlet-name>Vaadin</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
 	<listener>
-		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+		<listener-class>org.springframework.web.context.request.RequestContextListener
+		</listener-class>
 	</listener>
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener
+		</listener-class>
 	</listener>
-	
-	 <filter>
- 		 <filter-name>languageFilter</filter-name>
-  		 <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-  		<init-param>
-    		<param-name>targetBeanName</param-name>
-    		<param-value>languageFilter</param-value>
-  		</init-param>
-  		
+
+	<filter>
+		<filter-name>languageFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+		<init-param>
+			<param-name>targetBeanName</param-name>
+			<param-value>languageFilter</param-value>
+		</init-param>
+
 	</filter>
 	<filter-mapping>
-  		<filter-name>languageFilter</filter-name>
-  		<url-pattern>/*</url-pattern>
-	 </filter-mapping>
-	
+		<filter-name>languageFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
+	<filter>
+		<filter-name>openEntityManagerInViewFilter</filter-name>
+		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>openEntityManagerInViewFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
 </web-app>
